--- a/expenses/templates/expenses/add_expense.html
+++ b/expenses/templates/expenses/add_expense.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Expense</title>
-</head>
-<body>
+{% extends 'expenses/base.html' %}
+{% block content %}
+<h2>Add Expense</h2>
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Add Expense</button>
     </form>
-</body>
-</html>
+
+{% endblock %}
