--- a/expenses/templates/expenses/add_expense.html
+++ b/expenses/templates/expenses/add_expense.html
@@ -1,7 +1,7 @@
 {% extends 'expenses/base.html' %}
 {% block content %}
 <h2>Add Expense</h2>
-    <form method="POST">
+    <form method="POST" style="margin-top: 110px; padding-left: 30px;">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Add Expense</button>
