--- a/expenses/templates/expenses/base.html
+++ b/expenses/templates/expenses/base.html
@@ -1,42 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Expense Tracker{% endblock %}</title>
-    <style>
-        * {
-  box-sizing: border-box;
-}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% block title %}Expense Tracker{% endblock %}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- For chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-        body {
-    margin: 0;
-    padding: 0;
-}
-    </style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </head>
+
 <body>
-    {% include 'expenses/navbar.html' %}
+  {% include 'expenses/navbar.html' %}
 
-    {% block content %}
+  {% block content %}
 
-    {% endblock %}
-    <script>
-        let prevScrollpos = window.pageYOffset;
-        const navbar = document.querySelector("nav");
-      
-        window.onscroll = function () {
-          const currentScrollPos = window.pageYOffset;
-      
-          if (prevScrollpos > currentScrollPos) {
-            // Scrolling up
-            navbar.style.top = "0";
-          } else {
-            // Scrolling down
-            navbar.style.top = "-120px"; // or -100px depending on navbar height
-          }
-          prevScrollpos = currentScrollPos;
-        };
-      </script>
+  {% endblock %}
+  <script>
+    let prevScrollpos = window.pageYOffset;
+    const navbar = document.querySelector("nav");
+
+    window.onscroll = function () {
+      const currentScrollPos = window.pageYOffset;
+
+      if (prevScrollpos > currentScrollPos) {
+        // Scrolling up
+        navbar.style.top = "0";
+      } else {
+        // Scrolling down
+        navbar.style.top = "-120px"; // or -100px depending on navbar height
+      }
+      prevScrollpos = currentScrollPos;
+    };
+  </script>
 </body>
+
 </html>
