--- a/expenses/templates/expenses/login.html
+++ b/expenses/templates/expenses/login.html
@@ -3,10 +3,22 @@
 
 {% block content %}
 
-<form method="POST" style="margin-top:115px">
+<div style="display: flex; justify-content: center; margin-top:150px;">
+<form method="POST" style="display: inline-block; padding:70px 40px 70px 40px; border: solid rgb(130, 128, 128); border-radius: 40px ;">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
+    <div class="mb-5">
+        {{ form.email.label_tag }}
+        {{ form.email }}
+        {{ form.email.errors }}
+      </div>
+  
+      <div class="mb-5">
+        {{ form.password.label_tag }}
+        {{ form.password }}
+        {{ form.password.errors }}
+      </div>
+    <button type="submit" class="btn btn-success">Login</button>
 </form>
+</div>
 
 {% endblock %}
