--- a/expenses/templates/expenses/navbar.html
+++ b/expenses/templates/expenses/navbar.html
@@ -15,12 +15,12 @@
 ">
     
   <!-- Left side: Logo & Navigation -->
-  <div>
+  <div style="display: flex; align-items: center;">
       <a href="{% url 'expense_list' %}" style="color: white; font-weight: bold; font-size:40px; text-decoration: none; margin-right: 20px;">
           💸 ExpenseTracker
       </a>
       {% if user.is_authenticated %}
-          <a href="{% url 'add_expense' %}" style="color: white; text-decoration: none; margin-right: 15px;">Add Expense</a>
+          <a href="{% url 'add_expense' %}" style="color: white; text-decoration: none; margin-right: 15px; font-size: larger; margin-top:10px">Add Expense</a>
       {% endif %}
   </div>
 
