--- a/expenses/templates/expenses/edit_expense.html
+++ b/expenses/templates/expenses/edit_expense.html
@@ -1,10 +1,17 @@
 {% extends 'expenses/base.html' %}
 {% block content %}
 <h2>Add Expense</h2>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Save Changes</button>
-    </form>
+<div style="display: flex; flex-direction: column; align-items: center; margin-top:115px;">
+    <h2>Add Expense</h2>
+    <div>
+        <form method="POST"
+            style="display: inline-block; padding:50px 40px 50px 40px; border-radius: 40px; background-color: rgb(146, 217, 202);">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-success" style="margin-top: 10px;" >Save Changes</button>
+        </form>
+    </div>
+
+</div>
 
 {% endblock %}
