--- a/expenses/templates/expenses/expense.html
+++ b/expenses/templates/expenses/expense.html
@@ -74,14 +74,14 @@
         {% endfor %}
         <!-- For controlling the page number -->
 
-        <div>
+        <div style="text-align: center;">
             {% if page_obj.has_previous %}
-            <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-primary">Previous</a>
             {% endif %}
             Page {{page_obj.number}} of {{ page_obj.paginator.num_pages }}
             
             {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">Next</a>
+            <a href="?page={{ page_obj.next_page_number }}" class="btn btn-primary">Next</a>
             {% endif %}
         </div>
     </div>
